libs/@local/hashql/eval/tests/ui/graph/read/entity/complex-object-error.jsonc
//@ run: fail
//@ description: Complex objects cannot be queried directly in filter expressions
// biome-ignore format: readability
["::graph::tail::collect",
  ["::graph::body::filter",
    ["::graph::head::entities", ["::graph::tmp::decision_time_now"]],
    ["fn", { "#tuple": [] }, { "#struct": { "vertex": "_" } }, "_",
      ["==",
        "vertex.metadata.record_id.entity_id",
        //~^ ERROR Cannot query against this complex object
        "vertex.metadata.record_id.entity_id"
        //~^ ERROR Cannot query against this complex object
      ]
    ]
  ]
]
